--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+  <div> <h1>Stupid Coach</h1></div>
     <%= yield %>
+    <div> <p>Right now it is <%= Time.now %></p></div>
   </body>
 </html>
